Fix further PMD violations