@@ -1,31 +1,26 @@
 package eu.darkbot.util;
 
+import lombok.experimental.UtilityClass;
+
 import java.lang.reflect.Field;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
+@UtilityClass
 public class ReflectionUtils {
-    private ReflectionUtils() {}
 
     /** A map from primitive types to their corresponding wrapper types. */
-    private static final Map<Class<?>, Class<?>> PRIMITIVE_TO_WRAPPER;
-    static {
-        Map<Class<?>, Class<?>> primitiveToWrapper = new HashMap<>(16);
-        primitiveToWrapper.put(boolean.class, Boolean.class);
-        primitiveToWrapper.put(byte.class, Byte.class);
-        primitiveToWrapper.put(char.class, Character.class);
-        primitiveToWrapper.put(double.class, Double.class);
-        primitiveToWrapper.put(float.class, Float.class);
-        primitiveToWrapper.put(int.class, Integer.class);
-        primitiveToWrapper.put(long.class, Long.class);
-        primitiveToWrapper.put(short.class, Short.class);
-        primitiveToWrapper.put(void.class, Void.class);
-
-        PRIMITIVE_TO_WRAPPER = Collections.unmodifiableMap(primitiveToWrapper);
-    }
+    private static final Map<Class<?>, Class<?>> PRIMITIVE_TO_WRAPPER = Map.of(
+            boolean.class, Boolean.class,
+            byte.class, Byte.class,
+            char.class, Character.class,
+            double.class, Double.class,
+            float.class, Float.class,
+            int.class, Integer.class,
+            long.class, Long.class,
+            short.class, Short.class,
+            void.class, Void.class);
 
     @SuppressWarnings("unchecked")
     public static <T> Class<T> wrapped(Class<T> type) {
@@ -36,7 +31,7 @@ public class ReflectionUtils {
     public static <T> T get(Field field, Object obj, Class<T> clazz) {
         try {
             return clazz.cast(field.get(obj));
-        } catch (Exception e) {
+        } catch (ClassCastException | IllegalAccessException e) {
             e.printStackTrace();
         }
         return null;
@@ -45,7 +40,7 @@ public class ReflectionUtils {
     public static void set(Field field, Object obj, Object value) {
         try {
             field.set(obj, value);
-        } catch (Exception e) {
+        } catch (IllegalAccessException e) {
             e.printStackTrace();
         }
     }
@@ -53,13 +48,15 @@ public class ReflectionUtils {
     public static Type[] findGenericParameters(Class<?> clazz, Class<?> generic) {
         Type[] params;
         for (Type itf : clazz.getGenericInterfaces()) {
-            if ((params = getTypes(itf, generic)) != null) return params;
+            params = getTypes(itf, generic);
+            if (params != null) return params;
             if (itf instanceof Class) {
                 params = findGenericParameters((Class<?>) itf, generic);
                 if (params != null) return params;
             }
         }
-        if ((params = getTypes(clazz.getGenericSuperclass(), generic)) != null) return params;
+        params = getTypes(clazz.getGenericSuperclass(), generic);
+        if (params != null) return params;
 
         Class<?> parent = clazz.getSuperclass();
         if (parent != null) return findGenericParameters(parent, generic);
